--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container ps-lg-5 pe-lg-5">
-        <a class="navbar-brand fs-2" href="#">JS</a>
+        <a class="navbar-brand fs-2">JS</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,17 +33,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a
+                class="nav-link active rounded-pill"
+                aria-current="page"
+                href="./index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./about.html"
+              <a
+                class="nav-link rounded-pill"
+                aria-current="page"
+                href="./about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./contactUs.html"
+              <a
+                class="nav-link rounded-pill"
+                aria-current="page"
+                href="./contactUs.html"
                 >Contact Us</a
               >
             </li>
@@ -58,7 +67,7 @@
             <img src="./imgs/products.jpg" alt="" />
           </div>
           <div class="col-sm-12 col-lg-6">
-            <p class="fs-5">
+            <p class="fs-5 lh-lg text-black-50">
               In marketing, a product is an object, or system, or service made
               available for consumer use as of the consumer demand; it is
               anything that can be offered to a market to satisfy the desire or
@@ -72,9 +81,27 @@
             </p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-12 col-lg-6 mb-5">
+            <img src="./imgs/products2.jpg" alt="" />
+          </div>
+          <div class="col-sm-12 col-lg-6">
+            <p class="fs-5 lh-lg text-black-50">
+              Marketing research is the function that links the consumer,
+              customer, and public to the marketer through
+              information—information used to identify and define opportunities
+              and problems; generate, refine, and evaluate actions; monitor
+              performance; and improve understanding of it as a process. It
+              specifies the information required to address these issues,
+              designs the method for collecting information, manages and
+              implements the data collection process, analyzes the results, and
+              communicates the findings and their implications.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="lastSection mt-2 pt-4">
+    <div class="lastSection mt-5 pt-4">
       <div class="container">
         <div class="row">
           <div class="col-4">
@@ -128,7 +155,7 @@
     <footer class="p-1">
       <div class="container">
         <ul
-          class="d-flex justify-content-between align-items-center list-unstyled gap-5"
+          class="d-flex justify-content-between align-items-center list-unstyled gap-sm-5"
         >
           <li>
             <a class="d-block text-light"
@@ -159,7 +186,7 @@
             ></a>
           </li>
           <li>
-            <a class="d-block text-light top" href="#top"
+            <a class="d-block text-white top" href="#top"
               ><i
                 class="fa-solid fa-angles-up fa-lg fs-2 rounded-circle p-2"
               ></i
