--- a/contactUs.html
+++ b/contactUs.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container ps-lg-5 pe-lg-5">
-        <a class="navbar-brand fs-2" href="#">JS</a>
+        <a class="navbar-brand fs-2">JS</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,17 +33,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link active rounded-pill" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./about.html"
+              <a class="nav-link rounded-pill" aria-current="page" href="./about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./contactUs.html"
+              <a class="nav-link rounded-pill" aria-current="page" href="./contactUs.html"
                 >Contact Us</a
               >
             </li>
@@ -149,7 +149,7 @@
     <footer class="p-1">
       <div class="container">
         <ul
-          class="d-flex justify-content-between align-items-center list-unstyled gap-5"
+          class="d-flex justify-content-between align-items-center list-unstyled gap-sm-5"
         >
           <li>
             <a class="d-block text-light"
@@ -180,7 +180,7 @@
             ></a>
           </li>
           <li>
-            <a class="d-block text-light top" href="#top"
+            <a class="d-block text-white top" href="#top"
               ><i
                 class="fa-solid fa-angles-up fa-lg fs-2 rounded-circle p-2"
               ></i
@@ -189,7 +189,6 @@
         </ul>
       </div>
     </footer>
-
     <script src="./javaScript/all.min.js"></script>
     <script src="./javaScript/bootstrap.bundle.min.js"></script>
     <script src="./javaScript/project3.js"></script>
