--- a/index.html
+++ b/index.html
@@ -33,17 +33,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a
+                class="nav-link active rounded-pill"
+                aria-current="page"
+                href="./index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./about.html"
+              <a
+                class="nav-link rounded-pill"
+                aria-current="page"
+                href="./about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./contactUs.html"
+              <a
+                class="nav-link rounded-pill"
+                aria-current="page"
+                href="./contactUs.html"
                 >Contact Us</a
               >
             </li>
@@ -58,7 +67,7 @@
     <div class="sliderAndSection container">
       <div class="slider mt-5 position-relative overflow-hidden">
         <div class="imgs w-100 h-100">
-          <img src="" alt="No Products" />
+          <img src="./imgs/main.png" alt="No Products" />
         </div>
         <button class="carousel-control-prev">
           <span><i class="fa-solid fa-circle-arrow-left fa-2x"></i></span>
@@ -69,29 +78,16 @@
       </div>
       <div class="information overflow-hidden">
         <div class="w-100">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
-            ipsa quidem consequatur delectus, atque laboriosam ab, placeat
-            suscipit cum labore a. Laudantium ipsa quasi quis aperiam fugit
-            obcaecati laboriosam non.
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
-            ipsa quidem consequatur delectus, atque laboriosam ab, placeat
-            suscipit cum labore a. Laudantium ipsa quasi quis aperiam fugit
-            obcaecati laboriosam non.
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
-            ipsa quidem consequatur delectus, atque laboriosam ab, placeat
-            suscipit cum labore a. Laudantium ipsa quasi quis aperiam fugit
-            obcaecati laboriosam non.
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
-            ipsa quidem consequatur delectus, atque laboriosam ab, placeat
-            suscipit cum labore a. Laudantium ipsa quasi quis aperiam fugit
-            obcaecati laboriosam n----------------
+          <p class="fs-6 lh-lg text-white-50">
+            Marketing research is the function that links the consumer,
+            customer, and public to the marketer through information—information
+            used to identify and define opportunities and problems; generate,
+            refine, and evaluate actions; monitor performance; and improve
+            understanding of it as a process. It specifies the information
+            required to address these issues, designs the method for collecting
+            information, manages and implements the data collection process,
+            analyzes the results, and communicates the findings and their
+            implications.
           </p>
         </div>
       </div>
@@ -534,7 +530,7 @@
     <footer class="p-1">
       <div class="container">
         <ul
-          class="d-flex justify-content-between align-items-center list-unstyled gap-5"
+          class="d-flex justify-content-between align-items-center list-unstyled gap-sm-5"
         >
           <li>
             <a class="d-block text-light"
@@ -565,7 +561,7 @@
             ></a>
           </li>
           <li>
-            <a class="d-block text-light top" href="#top"
+            <a class="d-block text-white top" href="#top"
               ><i
                 class="fa-solid fa-angles-up fa-lg fs-2 rounded-circle p-2"
               ></i
@@ -573,6 +569,7 @@
           </li>
         </ul>
       </div>
+      <div class="ms-3 text-white-50">&copy; 2022 <span class="text-white">JS</span> project</div>
     </footer>
     <script src="./javaScript/all.min.js"></script>
     <script src="./javaScript/bootstrap.bundle.min.js"></script>
