--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container ps-lg-5 pe-lg-5">
-        <a class="navbar-brand fs-2">JS</a>
+        <a class="navbar-brand fs-2" href="./index.html">JS</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -66,7 +66,7 @@
           <div class="col-sm-12 col-lg-6 mb-5">
             <img src="./imgs/products.jpg" alt="" />
           </div>
-          <div class="col-sm-12 col-lg-6">
+          <div class="col-sm-12 col-lg-6 fw-light text-justify">
             <p class="fs-5 lh-lg text-black-50">
               In marketing, a product is an object, or system, or service made
               available for consumer use as of the consumer demand; it is
@@ -85,7 +85,7 @@
           <div class="col-sm-12 col-lg-6 mb-5">
             <img src="./imgs/products2.jpg" alt="" />
           </div>
-          <div class="col-sm-12 col-lg-6">
+          <div class="col-sm-12 col-lg-6 fw-light text-justify">
             <p class="fs-5 lh-lg text-black-50">
               Marketing research is the function that links the consumer,
               customer, and public to the marketer through
