--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container ps-lg-5 pe-lg-5">
-        <a class="navbar-brand fs-2">JS</a>
+        <a class="navbar-brand fs-2" href="./index.html">JS</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -66,8 +66,9 @@
     </nav>
     <div class="sliderAndSection container">
       <div class="slider mt-5 position-relative overflow-hidden">
-        <div class="imgs w-100 h-100">
-          <img src="./imgs/main.png" alt="No Products" />
+        <button type="button" class="btn btn-danger position-absolute end-0">Delete Products</button>
+        <div class="imgs w-100 h-100 mt-5">
+          <img src="" alt="No Products" />
         </div>
         <button class="carousel-control-prev">
           <span><i class="fa-solid fa-circle-arrow-left fa-2x"></i></span>
@@ -77,7 +78,7 @@
         </button>
       </div>
       <div class="information overflow-hidden">
-        <div class="w-100">
+        <div class="font-monospace text-justify">
           <p class="fs-6 lh-lg text-white-50">
             Marketing research is the function that links the consumer,
             customer, and public to the marketer through information—information
@@ -569,7 +570,9 @@
           </li>
         </ul>
       </div>
-      <div class="ms-3 text-white-50">&copy; 2022 <span class="text-white">JS</span> project</div>
+      <div class="ms-3 text-white-50">
+        &copy; 2022 <span class="text-white">JS</span> project
+      </div>
     </footer>
     <script src="./javaScript/all.min.js"></script>
     <script src="./javaScript/bootstrap.bundle.min.js"></script>
