--- a/contactUs.html
+++ b/contactUs.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container ps-lg-5 pe-lg-5">
-        <a class="navbar-brand fs-2">JS</a>
+        <a class="navbar-brand fs-2" href="./index.html">JS</a>
         <button
           class="navbar-toggler"
           type="button"
